--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BRADLEY'S RECIPES</title>
     </head>
     <body>
@@ -12,4 +13,5 @@
         <li><a href="recipes/rice-and-stew.html">RICE AND STEW</a></li>
     </ul>
     </body>
+
 </html>
