--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <li><a href="recipes/fried-rice.html">FRIED RICE</a></li>
         <li><a href="recipes/rice-and-stew.html">RICE AND STEW</a></li>
     </ul>
+        enjoy
     </body>
 
 </html>
+
